# lr1-parser

./: README.md  pyproject.toml
lr1-parser/: __main__.py  automaton.py  parser.py  visualization.py
static/: records.txt  tables.txt
