[tool.poetry]
name = "lr1-parser"
version = "0.1.0"
description = ""
authors = ["Queensferry <queensferry.me@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
graphviz = "^0.15"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
